# src/main/java/it/pagopa/interop/probing/eservice/operations/rest/ProducerController.java
@@ -5,7 +5,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import it.pagopa.interop.probing.eservice.operations.api.ProducersApi;
-import it.pagopa.interop.probing.eservice.operations.dtos.SearchProducerNameResponse;
+import it.pagopa.interop.probing.eservice.operations.dtos.ProducerResponse;
 import it.pagopa.interop.probing.eservice.operations.service.ProducerService;
 
 @RestController
@@ -15,8 +15,7 @@ public class ProducerController implements ProducersApi {
   ProducerService producerService;
 
   @Override
-  public ResponseEntity<List<SearchProducerNameResponse>> getEservicesProducers(
-      String producerName) {
+  public ResponseEntity<List<ProducerResponse>> getEservicesProducers(String producerName) {
     return ResponseEntity.ok(producerService.getEservicesProducers(producerName));
   }
 }
